останавливаем, когда всю еду на карте собрали